--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,5 @@ Description: Create publication-quality figures from whole-cell patch clamp elec
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
+Roxygen: list(markdown = TRUE)
