--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
+Depends: 
+    R (>= 2.10)
+Imports: 
+    dplyr,
+    here,
+    magrittr,
+    stringr,
+    tidyr,
+    utils
