--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Christelinda Laureijs
 Maintainer: Christelinda Laureijs <cslaureijs@gmail.com>
 Description: Create publication-quality figures from whole-cell patch clamp electrophysiology data.
-License: What license is it under?
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
