--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Roxygen: list(markdown = TRUE)
 Depends: 
     R (>= 2.10)
 Imports: 
+    abftools,
     dplyr,
+    ggplot2,
     here,
     magrittr,
     rlang,
