--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(import_ABF_file)
 export(import_cell_characteristics_df)
 export(load_ext_data)
 export(make_normalized_EPSC_data)
+export(make_pruned_EPSC_data)
 export(make_representative_sp_trace)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
