--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,11 @@
 
 export(import_ABF_file)
 export(import_cell_characteristics_df)
-export(load_ext_data)
+export(import_ext_data)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
 export(make_representative_sp_trace)
+export(make_summary_EPSC_data)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
 importFrom(magrittr,"%>%")
