Added working code to make baseline comparison plots.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ Depends:
 Imports: 
     abftools,
     dplyr,
+    ggforce,
     ggplot2,
     here,
     magrittr,
     rlang,
     stringr,
+    tibble,
     tidyr,
     utils
 Suggests: 
