--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(import_ABF_file)
 export(import_cell_characteristics_df)
 export(import_ext_data)
+export(import_theme_colours)
+export(make_baseline_comparison_plot)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
 export(make_representative_sp_trace)
