Added make_raw_plots() function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(import_theme_colours)
 export(make_baseline_comparison_plot)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
+export(make_raw_plots)
 export(make_representative_sp_trace)
 export(make_summary_EPSC_data)
 importFrom(abftools,MeltAbf)
