--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(make_pruned_EPSC_data)
 export(make_raw_plots)
 export(make_representative_sp_trace)
 export(make_summary_EPSC_data)
+export(make_summary_plot)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
 importFrom(magrittr,"%>%")
+importFrom(png,readPNG)
 importFrom(rlang,.data)
