Added function to perform t-tests for the summary plots.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,11 @@ Imports:
     ggforce,
     ggplot2,
     here,
+    lazyWeave,
     magrittr,
     png,
     rlang,
+    rstatix,
     stringr,
     tibble,
     tidyr,
