--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,11 @@ export(make_raw_plots)
 export(make_representative_sp_trace)
 export(make_summary_EPSC_data)
 export(make_summary_plot)
+export(perform_t_tests_for_summary_plot)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
+importFrom(lazyWeave,pvalString)
 importFrom(magrittr,"%>%")
 importFrom(png,readPNG)
 importFrom(rlang,.data)
+importFrom(rstatix,pairwise_t_test)
