Added detailed descriptions of output from pruning function, and added more internal links. Started adding make_variance_data function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(make_raw_plots)
 export(make_representative_sp_trace)
 export(make_summary_EPSC_data)
 export(make_summary_plot)
+export(make_variance_data)
 export(perform_t_tests_for_summary_plot)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
