--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,13 @@ export(make_raw_plots)
 export(make_representative_sp_trace)
 export(make_summary_EPSC_data)
 export(make_summary_plot)
+export(make_variance_comparison_plot)
 export(make_variance_data)
 export(perform_t_tests_for_summary_plot)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
+importFrom(ggsignif,geom_signif)
+importFrom(ggtext,element_markdown)
 importFrom(lazyWeave,pvalString)
 importFrom(magrittr,"%>%")
 importFrom(png,readPNG)
