Added working make_PPR_data function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(import_ABF_file)
 export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
+export(make_PPR_data)
 export(make_baseline_comparison_plot)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
