--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,10 @@ export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
 export(make_PPR_data)
+export(make_PPR_plot_multiple_treatments)
+export(make_PPR_plot_one_treatment)
 export(make_baseline_comparison_plot)
+export(make_cv_plot)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
 export(make_raw_plots)
