Renamed all plotting functions to start with plot_

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,19 @@ export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
 export(make_PPR_data)
-export(make_PPR_plot_multiple_treatments)
-export(make_PPR_plot_one_treatment)
-export(make_baseline_comparison_plot)
-export(make_cv_plot)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
-export(make_raw_plots)
-export(make_representative_sp_trace)
 export(make_summary_EPSC_data)
-export(make_summary_plot)
-export(make_variance_comparison_plot)
 export(make_variance_data)
 export(perform_t_tests_for_summary_plot)
+export(plot_PPR_data_multiple_treatments)
+export(plot_PPR_data_one_treatment)
+export(plot_baseline_data)
+export(plot_cv_data)
+export(plot_raw_current_data)
+export(plot_spontaneous_current_trace)
+export(plot_summary_current_data)
+export(plot_variance_comparison_data)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
 importFrom(ggsignif,geom_signif)
