Added interactive summary table and added documentation for spontaneous raw and pruned data. Reduced filesize of data/ by using compress = "xz" for evoked and spontaneous current data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
 export(make_PPR_data)
+export(make_interactive_summary_table)
 export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
 export(make_summary_EPSC_data)
@@ -25,5 +26,7 @@ importFrom(ggtext,element_markdown)
 importFrom(lazyWeave,pvalString)
 importFrom(magrittr,"%>%")
 importFrom(png,readPNG)
+importFrom(reactable,reactable)
+importFrom(reactablefmtr,react_sparkline)
 importFrom(rlang,.data)
 importFrom(rstatix,pairwise_t_test)
