--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,3 +40,5 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/christelinda-laureijs/patchclampplotteR
+BugReports: https://github.com/christelinda-laureijs/patchclampplotteR/issues
