Added custom ggplot theme to all plotting functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(make_normalized_EPSC_data)
 export(make_pruned_EPSC_data)
 export(make_summary_EPSC_data)
 export(make_variance_data)
+export(patchclampplotteR_theme)
 export(perform_t_tests_for_summary_plot)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
@@ -21,6 +22,7 @@ export(plot_summary_current_data)
 export(plot_variance_comparison_data)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
+importFrom(ggplot2,"%+replace%")
 importFrom(ggsignif,geom_signif)
 importFrom(ggtext,element_markdown)
 importFrom(lazyWeave,pvalString)
