--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
+Remotes: 
+    abftools@0.9.9,
+    dataui@0.0.1
 Depends: 
     R (>= 2.10)
 Imports: 
