--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,8 @@ Roxygen: list(markdown = TRUE)
 Depends: 
     R (>= 2.10)
 Imports: 
-    abftools,
-    dataui,
+    abftools (>= 0.9.9),
+    dataui (>= 0.0.1),
     dplyr,
     ggforce,
     ggplot2,
@@ -42,3 +42,6 @@ Suggests:
 Config/testthat/edition: 3
 URL: https://github.com/christelinda-laureijs/patchclampplotteR, https://christelinda-laureijs.github.io/patchclampplotteR/
 BugReports: https://github.com/christelinda-laureijs/patchclampplotteR/issues
+Remotes:  
+    Crystal-YWu/abftools,
+    timelyportfolio/dataui
