Added Google Analytics tracking.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,16 @@
 url: https://christelinda-laureijs.github.io/patchclampplotteR/
 template:
   bootstrap: 5
+  includes:
+    in_header: |
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M92L6F0ZB2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-M92L6F0ZB2');
+    </script>
+
 
