--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,7 +4,7 @@ template:
   includes:
     in_header: |
 
-      <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
 
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-M92L6F0ZB2"></script>
