--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,6 +15,7 @@ template:
       <link rel="icon" type="image/x-icon" href="favicon.ico">
       <link rel="icon" type="image/x-icon" href="/favicon.ico">
       <link rel="icon" type="image/x-icon" href="./favicon.ico">
+      <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
 
 navbar:
