Added working code to make spontaneous current comparison plots.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
 export(plot_cv_data)
 export(plot_raw_current_data)
+export(plot_spontaneous_current_parameter_comparison)
 export(plot_spontaneous_current_trace)
 export(plot_summary_current_data)
 export(plot_variance_comparison_data)
