--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,10 +38,13 @@ Imports:
     tidyr,
     utils
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://github.com/christelinda-laureijs/patchclampplotteR, https://christelinda-laureijs.github.io/patchclampplotteR/
 BugReports: https://github.com/christelinda-laureijs/patchclampplotteR/issues
-Remotes:  
+Remotes: 
     Crystal-YWu/abftools,
     timelyportfolio/dataui
+VignetteBuilder: knitr
