Removed forward slash

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,7 +5,7 @@ home:
 
 authors:
   Christelinda Laureijs
-    href: https://christelindalaureijs.com/
+    href: https://christelindalaureijs.com
 
 template:
   bootstrap: 5
