--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,7 +4,7 @@ home:
   title: Plot and analyze patch clamp electrophysiology data in R
 
 authors:
-  Christelinda Laureijs
+  Christelinda Laureijs:
     href: https://christelindalaureijs.com
 
 template:
