Added FAQ to articles dropdown

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -96,5 +96,6 @@ articles:
   - articles/evoked-current-analysis
   - articles/action-potential-analysis
   - articles/spontaneous-current-analysis
+  - articles/FAQ
 
 
