--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,4 @@ importFrom(reactable,reactable)
 importFrom(reactablefmtr,react_sparkline)
 importFrom(rlang,.data)
 importFrom(rstatix,pairwise_t_test)
+importFrom(utils,menu)
