--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(import_ABF_file)
 export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
+export(make_AP_plot)
 export(make_PPR_data)
 export(make_interactive_summary_table)
 export(make_normalized_EPSC_data)
