Renamed make_AP_plot to plot_AP_comparison for consistency. Added new dataset and function to _pkgdown.yml

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(import_ABF_file)
 export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
-export(make_AP_plot)
 export(make_PPR_data)
 export(make_interactive_summary_table)
 export(make_normalized_EPSC_data)
@@ -14,6 +13,7 @@ export(make_summary_EPSC_data)
 export(make_variance_data)
 export(patchclampplotteR_theme)
 export(perform_t_tests_for_summary_plot)
+export(plot_AP_comparison)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
