Added custom font through extrafont() in FAQ demo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plot_summary_current_data)
 export(plot_variance_comparison_data)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
+importFrom(extrafont,font_import)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggsignif,geom_signif)
 importFrom(ggtext,element_markdown)
