Added length_of_current_injection argument and plot_AP_frequencies function. Also added sample_AP_count_data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(make_variance_data)
 export(patchclampplotteR_theme)
 export(perform_t_tests_for_summary_plot)
 export(plot_AP_comparison)
+export(plot_AP_frequencies)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
@@ -35,4 +36,5 @@ importFrom(reactable,reactable)
 importFrom(reactablefmtr,react_sparkline)
 importFrom(rlang,.data)
 importFrom(rstatix,pairwise_t_test)
+importFrom(stats,sd)
 importFrom(utils,menu)
