Renamed plot_AP_frequencies to plot_AP_frequencies_multiple_treatments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ export(make_variance_data)
 export(patchclampplotteR_theme)
 export(perform_t_tests_for_summary_plot)
 export(plot_AP_comparison)
-export(plot_AP_frequencies)
+export(plot_AP_frequencies_multiple_treatments)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
