--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(patchclampplotteR_theme)
 export(perform_t_tests_for_summary_plot)
 export(plot_AP_comparison)
 export(plot_AP_frequencies_multiple_treatments)
+export(plot_AP_frequencies_single_treatment)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
