Added plot_AP_trace function, and modified import_ABF_data to include a recording_mode argument. Added sample ap dataframes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(perform_t_tests_for_summary_plot)
 export(plot_AP_comparison)
 export(plot_AP_frequencies_multiple_treatments)
 export(plot_AP_frequencies_single_treatment)
+export(plot_AP_trace)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
