Added scale bar option to plot_AP_trace and updated documentation on scale bar parameters in both trace functions.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -108,6 +108,8 @@ reference:
   contents:
   - sample_AP_data
   - sample_AP_count_data
+  - sample_ap_abf_baseline
+  - sample_ap_abf_insulin
 
 
 articles:
