Added multiple colour options including viridis to plot_AP_trace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,3 +40,4 @@ importFrom(rlang,.data)
 importFrom(rstatix,pairwise_t_test)
 importFrom(stats,sd)
 importFrom(utils,menu)
+importFrom(viridis,scale_color_viridis)
