Added plot_percent_change_comparisons function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_one_treatment)
 export(plot_baseline_data)
 export(plot_cv_data)
+export(plot_percent_change_comparisons)
 export(plot_raw_current_data)
 export(plot_spontaneous_current_parameter_comparison)
 export(plot_spontaneous_current_trace)
