Replaced base R warnings and messages with cli alerts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,9 @@ export(plot_summary_current_data)
 export(plot_variance_comparison_data)
 importFrom(abftools,MeltAbf)
 importFrom(abftools,abf2_load)
+importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggsignif,geom_signif)
 importFrom(ggtext,element_markdown)
