Expanded on description for sample summary data, clarified category further, added sample downloadable csv and added more instructions to spont current analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,3 +45,4 @@ importFrom(rstatix,pairwise_t_test)
 importFrom(stats,sd)
 importFrom(utils,menu)
 importFrom(viridis,scale_color_viridis)
+importFrom(xfun,embed_file)
