--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,12 +39,13 @@ Imports:
     tibble,
     tidyr,
     utils,
-    viridis,
-    xfun
+    viridis
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    xfun,
+    purrr
 Config/testthat/edition: 3
 URL: https://github.com/christelinda-laureijs/patchclampplotteR, https://christelinda-laureijs.github.io/patchclampplotteR/
 BugReports: https://github.com/christelinda-laureijs/patchclampplotteR/issues
