--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(import_ABF_file)
 export(import_cell_characteristics_df)
 export(import_ext_data)
 export(import_theme_colours)
+export(insert_png_as_ggplot)
 export(make_PPR_data)
 export(make_interactive_summary_table)
 export(make_normalized_EPSC_data)
@@ -32,6 +33,7 @@ importFrom(abftools,abf2_load)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggsignif,geom_signif)
 importFrom(ggtext,element_markdown)
+importFrom(jpeg,readJPEG)
 importFrom(lazyWeave,pvalString)
 importFrom(magrittr,"%>%")
 importFrom(png,readPNG)
