Added plot cell coordinates function, and created own version of pvalString

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plot_AP_trace)
 export(plot_PPR_data_multiple_treatments)
 export(plot_PPR_data_single_treatment)
 export(plot_baseline_data)
+export(plot_cell_coordinates_data)
 export(plot_cv_data)
 export(plot_percent_change_comparisons)
 export(plot_raw_current_data)
